# training

./: .gitignore  README.md  tmp.txt
ArduinoUno/01_led_and_serial/: 01_led_and_serial.ino
ArduinoUno/02_analog/: 02_analog.ino
ArduinoUno/03_leds/: 03_leds.ino
ArduinoUno/04_buzzer/: 04_buzzer.ino
ArduinoUno/05_pwm_led/: 05_pwm_led.ino
ArduinoUno/06_servo motor/: 06_servo motor.ino
ArduinoUno/07_1602a/: 07_1602a.ino
C/: .gitignore
C/00_data_structure_and_algorithms/: Makefile  README.md  test_main.c
C/01_thread_pool/: Makefile  test_main.c  thread_pool.c  thread_pool.h
C/02_01_glibc_hash/: hash_glib.c
C/02_02_hashmap/: hashmap.h
C/02_hashmap/: Makefile  hashmap.c  hashmap.h  test_main.c
C/03_socket/: Makefile  client.c  common.h
C/04_rbtree/: rbtree.h
C/04_tools/01_cmake_build_rpm/: CMakeLists.txt  README
C/04_tools/01_cmake_build_rpm/include/: libnasmgmt.h
C/04_tools/01_cmake_build_rpm/lib/: libnasmgmt.c
C/04_tools/01_cmake_build_rpm/test/: test.c
C/05_rbtree/: Makefile  rbtree.c  rbtree.h  rbtree_augmented.h  stddef.h  test_main.c
C/06_mempool/: mempool.c
C/07_listhead/: Makefile  align.h  container.h  program  test_main.c
C/08_design_patter/: README
C/08_syslog/: logger.c  logger.h
C/09_lockfree_queue/: Makefile  docs.txt  lockfree_queue.c  lockfree_queue.h  mutex_queue.c  mutex_queue.h  queue.h  test_main copy.c  test_main.c  ttt3
C/10_async_io/: README.md
C/common/: debug.h  list.h  utils.h
C/diff_case/: main.c
C/hash/: Makefile  README
C/job_interview/: 01_reverse_list.c  02_single_list_sort.c  03_is_anagram.c  04_traverse_binary_tree_hierarchy.c  05_max_continue_inc_num_str.c  06_tree_node_distance.c  07_two_node_distance_in_tree.c  08_cycle_list_check.c  09_rotate_array_find_minmax.c  10_rotate_array_find_target.c  11_sum_of_two.c  12_sum_of_three.c  13_quick_sort.c  14_LRU.c  15_min_coverage_substring.c  16_has_path_sum.c  17_length_of_longest_sub_string.c  18_max_sub_array.c  19_stack_implemented_queue.c  20_queue_implemented_stack.c  21_minimum_stack.c  22_heap_sort.c  23_top_m_num.c  24_distributed_ID_generator.c  25_min_no_comlicate_str.c  Makefile  comm.c  comm.h
C/link_load_and_lib/: Makefile
C/linked_list/: reverse_list.c
C/rb_tree/: Makefile  rb_tree.c  rb_tree.h
C/rudp_self/: Makefile  client.c  common.h  list.c  protocol.c  protocol.h  ring_buffer.h  test_client.c  test_server.c  test_server.h  utils.h
Doc/: test.man
Python/data_visualization/: pygal_worldmap.py
Python/deep_learning/: requirements.txt
Python/graphics_card/: main.py  requirements.txt
Python/python_request/: README  main_loop.py
Python/scraping/: README  cache_builtwith.txt  main_loop.py
Rust/: readme.txt
Warehouse/C/C-cmake_demo/: CMakeLists.txt  runhello.sh
Warehouse/C/C-cmake_demo/doc/: hello.txt
Warehouse/C/C-cmake_demo/lib/: CMakeLists.txt  hello.c  hello.h
Warehouse/C/C-cmake_demo/src/: CMakeLists.txt  hello.c
c/hash/: hash_glib.c
c/linked_list/: reverse_list_2.c
c/ls/: Makefile  myls.c
c/progress_bar/: progress_bar.c
c/serach/: binary_search.c
myOS/: Makefile  README.md  build.sh
myOS/bochs/: Makefile  bochdsrc.bxrc  bochdsrc.txt  bochsrc.bxrc
myOS/boot/: boot.s  grub_boot.s  head.s  setup.s
myOS/core/: main.c  screen.c  string.c
myOS/docs/: 01_boot.md  02_GDT.md  02_GDT_IDT.md  03_A20.md  04_内联汇编.md  compile.md  interrupt.md  mm.md  mm.txt  registers.md
myOS/grub/: Makefile  build.sh  kernel  mkgrub.sh  mkpart.sh
myOS/include/: asm.h  (+4 more)
ssh/: README.md
(+324 files in other folders)
